--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,18 @@
 .navbar {
   height: 110px;
+  background-color: rgba(0,0,0,0);
+  border: none;
 }
 .row {
   padding: 0;
   margin: 0;
+}
+
+
+@media only screen and (max-width : 767px) {
+
+  .navbar-brand img {
+    width: 40px;
+  }
+
 }
